--- a/package.json
+++ b/package.json
@@ -78,8 +78,8 @@
       "cordova-plugin-simple-image-resizer": {},
       "cordova-plugin-network-information": {},
       "cordova-plugin-x-socialsharing": {
-        "PHOTO_LIBRARY_ADD_USAGE_DESCRIPTION": "Esta app necessita de acesso à biblioteca de fotos para fazer uso de fotos tiradas a carros ilegalmente estacionados.",
-        "PHOTO_LIBRARY_USAGE_DESCRIPTION": "Esta app necessita de acesso à biblioteca de fotos para fazer uso de fotos tiradas a carros ilegalmente estacionados."
+        "PHOTO_LIBRARY_ADD_USAGE_DESCRIPTION": "Esta app necessita de acesso à biblioteca de fotos para fazer uso de fotos tiradas a ocorrências.",
+        "PHOTO_LIBRARY_USAGE_DESCRIPTION": "Esta app necessita de acesso à biblioteca de fotos para fazer uso de fotos tiradas a ocorrências."
       },
       "cordova-plugin-androidx-adapter": {},
       "cordova-plugin-mobile-ocr": {},
@@ -88,14 +88,12 @@
     },
     "platforms": [
       "browser",
-      "ios",
       "android"
     ]
   },
   "devDependencies": {
     "async": "^3.2.0",
     "cordova-android": "^9.1.0",
-    "cordova-ios": "^6.2.0",
     "cordova-plugin-androidx-adapter": "^1.1.3",
     "cordova-plugin-camera": "github:apache/cordova-plugin-camera",
     "cordova-plugin-file": "^6.0.2",
