--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -1,7 +1,6 @@
-# This workflow will do a clean install of node dependencies, cache/restore them, build the source code and run tests across different versions of node
 # For more information see: https://help.github.com/actions/language-and-framework-guides/using-nodejs-with-github-actions
 
-name: Node.js CI
+name: android
 
 on:
   workflow_dispatch:
@@ -14,7 +13,7 @@ jobs:
   android:
     strategy:
       matrix:
-        platform: [ubuntu-latest, macos-latest, windows-latest]
+        platform: [ubuntu-latest]
         node-version: [12.x, 14.x, 16.x]
         
     runs-on: ${{ matrix.platform }}
@@ -26,8 +25,15 @@ jobs:
       with:
         node-version: ${{ matrix.node-version }}
         cache: 'npm'
+    - name: Changing to Java 8
+      run: | 
+        javac -version
+        sudo update-java-alternatives -s $(sudo update-java-alternatives -l | grep 8 | cut -d " " -f1) || echo OK
+        javac -version
     - name: Install Apache Cordova
       run: npm install -g cordova
     - name: Add Android Platform
       run: cordova platform add android
     - run: npm test
+    - name: Building APK
+      run: cordova build android --production
