--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "jAlert": "^4.9.1",
     "jquery": "^3.5.1",
     "leaflet": "^1.7.1",
+    "leaflet-image": "^0.4.0",
     "leaflet.markercluster": "^1.5.0",
     "mysql": "^2.18.1",
     "path": "^0.12.7",
