--- a/package.json
+++ b/package.json
@@ -98,6 +98,7 @@
   },
   "devDependencies": {
     "async": "^3.2.0",
+    "command-line-args": "^5.2.0",
     "cordova-android": "^9.1.0",
     "cordova-plugin-androidx-adapter": "^1.1.3",
     "cordova-plugin-camera": "github:apache/cordova-plugin-camera",
@@ -109,6 +110,7 @@
     "html-minifier": "^4.0.0",
     "html-validate": "^4.1.0",
     "npm-check-updates": "^7.1.1",
+    "semver": "^7.3.5",
     "standard": "^14.3.4",
     "uglify-es": "^3.3.9",
     "uglifycss": "0.0.29",
