--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "in.my.district",
+  "name": "in-my-district",
   "displayName": "In my District!",
   "version": "1.2.6",
   "description": "Report to your municipality certain irregularities in your neighborhood or district",
