--- a/package.json
+++ b/package.json
@@ -82,10 +82,10 @@
       },
       "cordova-plugin-network-information": {},
       "cordova-plugin-androidx-adapter": {},
+      "cordova-plugin-file": {},
       "cordova-plugin-camera": {
         "ANDROID_SUPPORT_V4_VERSION": "27.+"
-      },
-      "cordova-plugin-file": {}
+      }
     },
     "platforms": [
       "browser",
@@ -97,7 +97,7 @@
     "command-line-args": "^5.2.0",
     "cordova-android": "^9.1.0",
     "cordova-plugin-androidx-adapter": "^1.1.3",
-    "cordova-plugin-camera": "github:apache/cordova-plugin-camera",
+    "cordova-plugin-camera": "^5.0.3",
     "cordova-plugin-file": "^6.0.2",
     "cordova-plugin-network-information": "github:apache/cordova-plugin-network-information",
     "fs-extra": "^9.0.1",
