--- a/package.json
+++ b/package.json
@@ -28,7 +28,6 @@
     "cordova-browser": "^6.0.0",
     "cordova-import-npm": "^1.0.24",
     "cordova-pdf-generator": "^2.1.1",
-    "cordova-plugin-app-version": "^0.1.12",
     "cordova-plugin-cache-clear": "^1.3.8",
     "cordova-plugin-device": "^2.0.3",
     "cordova-plugin-email-composer": "^0.9.2",
@@ -76,16 +75,16 @@
       "cordova-plugin-splashscreen": {},
       "cordova-plugin-inappbrowser": {},
       "cordova-plugin-is-debug": {},
-      "cordova-plugin-app-version": {},
       "cordova-plugin-simple-image-resizer": {
         "ANDROID_EXIFINTERFACES_VERSION": "27.+"
       },
-      "cordova-plugin-network-information": {},
       "cordova-plugin-androidx-adapter": {},
       "cordova-plugin-file": {},
       "cordova-plugin-camera": {
         "ANDROID_SUPPORT_V4_VERSION": "27.+"
-      }
+      },
+      "cordova-plugin-network-information": {},
+      "cordova-plugin-app-version": {}
     },
     "platforms": [
       "browser",
@@ -97,9 +96,10 @@
     "command-line-args": "^5.2.0",
     "cordova-android": "^9.1.0",
     "cordova-plugin-androidx-adapter": "^1.1.3",
+    "cordova-plugin-app-version": "^0.1.12",
     "cordova-plugin-camera": "^5.0.3",
     "cordova-plugin-file": "^6.0.2",
-    "cordova-plugin-network-information": "github:apache/cordova-plugin-network-information",
+    "cordova-plugin-network-information": "^3.0.0",
     "fs-extra": "^9.0.1",
     "handlebars": "^4.7.6",
     "html-minifier": "^4.0.0",
