--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -5,9 +5,9 @@ name: android
 on:
   workflow_dispatch:
   push:
-    branches: [ master ]
+    branches: [ main ]
   pull_request:
-    branches: [ master ]
+    branches: [ main ]
 
 jobs:
   android:
