--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "cordova-pdf-generator": "^2.1.1",
     "cordova-plugin-cache-clear": "^1.3.8",
     "cordova-plugin-device": "^2.0.3",
-    "cordova-plugin-email-composer": "^0.9.2",
+    "cordova-plugin-email-composer": "github:jfoclpf/cordova-plugin-email-composer#pr-Fix_361-Android_11_support",
     "cordova-plugin-geolocation": "^4.1.0",
     "cordova-plugin-inappbrowser": "^5.0.0",
     "cordova-plugin-is-debug": "^1.0.0",
