--- a/package.json
+++ b/package.json
@@ -30,7 +30,6 @@
     "cordova-pdf-generator": "^2.1.1",
     "cordova-plugin-cache-clear": "^1.3.8",
     "cordova-plugin-device": "^2.0.3",
-    "cordova-plugin-email-composer": "github:jfoclpf/cordova-plugin-email-composer#pr-Fix_361-Android_11_support",
     "cordova-plugin-geolocation": "^4.1.0",
     "cordova-plugin-inappbrowser": "^5.0.0",
     "cordova-plugin-is-debug": "^1.0.0",
@@ -88,8 +87,8 @@
       "@globules-io/cordova-plugin-ios-xhr": {}
     },
     "platforms": [
-      "android",
-      "ios"
+      "ios",
+      "android"
     ]
   },
   "devDependencies": {
@@ -100,6 +99,7 @@
     "cordova-plugin-androidx-adapter": "^1.1.3",
     "cordova-plugin-app-version": "^0.1.12",
     "cordova-plugin-camera": "^5.0.3",
+    "cordova-plugin-email-composer": "github:jfoclpf/cordova-plugin-email-composer#pr-Fix_361-Android_11_support",
     "cordova-plugin-file": "^6.0.2",
     "cordova-plugin-network-information": "^3.0.0",
     "fs-extra": "^9.0.1",
