--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -38,6 +38,10 @@ jobs:
         /usr/local/lib/android/sdk/cmdline-tools/latest/bin/sdkmanager --version
         /usr/local/lib/android/sdk/cmdline-tools/latest/bin/sdkmanager --uninstall 'build-tools;31.0.0'
         /usr/local/lib/android/sdk/cmdline-tools/latest/bin/sdkmanager --list
+    - name: List SDK dir
+      run: |
+        ls -la /usr/local/lib/android/sdk/build-tools/
+        ls -la /usr/local/lib/android/sdk/build-tools/32.0.0/
     - name: echo PATH
       run: echo "${PATH//:/$'\n'}"
     - name: Install Apache Cordova
