--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -38,9 +38,11 @@ jobs:
         /usr/local/lib/android/sdk/cmdline-tools/latest/bin/sdkmanager --version
         /usr/local/lib/android/sdk/cmdline-tools/latest/bin/sdkmanager --uninstall 'build-tools;31.0.0'
         /usr/local/lib/android/sdk/cmdline-tools/latest/bin/sdkmanager --list
-    - name: List SDK dir
+    - name: List SDK dir and mv
       run: |
         ls -la /usr/local/lib/android/sdk/build-tools/
+        cd /usr/local/lib/android/sdk/build-tools/32.0.0/
+        mv d8 dx && cd lib && mv d8.jar dx.jar
         ls -la /usr/local/lib/android/sdk/build-tools/32.0.0/
     - name: echo PATH
       run: echo "${PATH//:/$'\n'}"
