--- a/.github/workflows/ios.yml
+++ b/.github/workflows/ios.yml
@@ -18,6 +18,10 @@ jobs:
         
     runs-on: ${{ matrix.platform }}
 
+    defaults:
+      run:
+        working-directory: app
+
     steps:
     - uses: actions/checkout@v2
     - name: Use Node.js ${{ matrix.node-version }}
@@ -36,9 +40,6 @@ jobs:
       run: |
         cordova platform rm android
         cordova platform add ios
-      working-directory: app
     - run: npm test
-      working-directory: app
     - name: Building APP
       run: cordova build ios --release
-      working-directory: app
