--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -29,6 +29,7 @@ jobs:
       with:
         node-version: ${{ matrix.node-version }}
         cache: 'npm'
+        cache-dependency-path: app/package-lock.json
     - name: Changing to Java 8
       run: | 
         javac -version
