change to jaba 8

--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -33,6 +33,8 @@ jobs:
     - name: Changing to Java 8
       run: | 
         javac -version
+        sudo update-java-alternatives -l
+        sudo apt install openjdk-8-jdk -y
         sudo update-java-alternatives -s $(sudo update-java-alternatives -l | grep 8 | cut -d " " -f1) || echo OK
         javac -version
     - name: Install Android SDK
