--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -36,10 +36,10 @@ jobs:
         sudo apt install openjdk-8-jdk -y
     - name: Changing to Java 8
       run: | 
-        javac -version
-        sudo update-java-alternatives -l; echo OK
-        sudo update-java-alternatives -s $(sudo update-java-alternatives -l | grep 8 | cut -d " " -f1) || echo OK
-        javac -version
+        java -version
+        sudo update-java-alternatives -l || echo OK
+        sudo update-java-alternatives -s $(sudo update-java-alternatives -l | grep '1.8' | cut -d " " -f1) || echo OK
+        java -version
     - name: Install Android SDK
       run: |
         sudo apt install android-sdk -y
