--- a/server/package.json
+++ b/server/package.json
@@ -2,8 +2,8 @@
   "name": "in-my-district-server",
   "version": "1.0.0",
   "description": "server code for the APP In My District",
-  "main": "./serverForDB.js",
   "scripts": {
+    "start": "node ./serverForDB.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "João Pimentel Ferreira",
