--- a/app/package.json
+++ b/app/package.json
@@ -12,7 +12,8 @@
     "build-release-apk": "npm test && scripts/buildReleaseAPK.sh",
     "build-release-aab": "npm test && scripts/buildReleaseAAB.sh",
     "run-release-on-device": "scripts/runReleaseOnDevice.sh",
-    "run-debug-on-device": "adb get-state 1>/dev/null 2>&1 && echo 'DEVICE ATTACHED' || { echo 'No device attached'; exit 1; } && cordova run android --device --debug"
+    "run-debug-on-device": "adb get-state 1>/dev/null 2>&1 && echo 'DEVICE ATTACHED' || { echo 'No device attached'; exit 1; } && cordova run android --device --debug",
+    "regenerate-png-files": "./res/icon/generateIcons.sh && ./res/screen/generateScreens.sh && git add res/* && git commit -m 'PNGs regenerated'"
   },
   "repository": {
     "type": "git",
