anomalies json file should be in /commons; copied to /app/www/json dir upon cordova prepare or build

--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,9 @@ temp/
 build/
 bin/
 
+# anomalies file to be amended is /commons/json/anomalies.json
+/app/www/json/anomalies.json
+
 # Cordova - platforms and plugins
 /app/platforms/
 /app/plugins/
