--- a/server/package.json
+++ b/server/package.json
@@ -15,6 +15,7 @@
     "debug": "^4.3.3",
     "express": "^4.17.3",
     "express-fileupload": "^1.3.1",
+    "express-handlebars": "^6.0.6",
     "mysql": "^2.18.1",
     "sql-formatter": "^4.0.2"
   }
