--- a/server/package.json
+++ b/server/package.json
@@ -4,7 +4,7 @@
   "description": "server code for the APP In My District",
   "scripts": {
     "start": "node ./main.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "standard"
   },
   "author": "João Pimentel Ferreira",
   "license": "GPL-3.0",
@@ -18,5 +18,8 @@
     "express-handlebars": "^6.0.6",
     "mysql": "^2.18.1",
     "sql-formatter": "^4.0.2"
+  },
+  "devDependencies": {
+    "standard": "^17.0.0"
   }
 }
