--- a/keys-configs/configs.sample.json
+++ b/keys-configs/configs.sample.json
@@ -4,7 +4,7 @@
     "host": "nomeubairro.app"
   },
   "server": {
-    "urls": {
+    "url": {
       "scheme": "https",
       "host": "servidor.nomeubairro.app",
       "paths" : {
