--- a/keys-configs/configs.sample.json
+++ b/keys-configs/configs.sample.json
@@ -12,7 +12,7 @@
         "requestHistoric": "/serverapp_get_historic",
         "solvedOccurrence": "/resolvido",
         "photosUpload": "/serverapp_img_upload",
-        "photosDir": "/image_server"
+        "getPhotos": "/image_server"
       }
     },
     "mainAppPort": 3045,
