--- a/keys-configs/configs.sample.json
+++ b/keys-configs/configs.sample.json
@@ -48,10 +48,10 @@
   ],
   "appStores": {
     "playStore": "https://play.google.com/store/apps/details?id=com.in.my.district",
-    "F-Droid": "https://f-droid.org/packages/com.in.my.district/"
+    "F-Droid": "https://f-droid.org/packages/com.in.my.district"
   },
   "geoApi": {
     "nominatimReverse": "https://nominatim.openstreetmap.org/reverse",
-    "ptApi": "https://geoapi.pt/"
+    "ptApi": "https://geoapi.pt"
   }
 }
