--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -14,7 +14,7 @@ jobs:
     strategy:
       matrix:
         platform: [ubuntu-18.04, ubuntu-20.04]
-        node-version: [lts/*]
+        node-version: [16]
         
     runs-on: ${{ matrix.platform }}
 
