--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -48,7 +48,7 @@ jobs:
       run: |
         /usr/local/lib/android/sdk/cmdline-tools/latest/bin/sdkmanager --version
         /usr/local/lib/android/sdk/cmdline-tools/latest/bin/sdkmanager --uninstall 'build-tools;31.0.0'
-        /usr/local/lib/android/sdk/cmdline-tools/latest/bin/sdkmanager --list
+        /usr/local/lib/android/sdk/cmdline-tools/latest/bin/sdkmanager --list_installed
     - name: List SDK dir and cp
       run: |
         ls -la /usr/local/lib/android/sdk/build-tools/
@@ -66,3 +66,4 @@ jobs:
         rm -rf platforms/android
         cordova platform add android
     - run: npm test
+    - run: cordova build android --release
