--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -44,12 +44,11 @@ jobs:
     - name: Install Android SDK
       run: |
         sudo apt install android-sdk -y
-    - name: Uninstall SDK v31.0.0 and list SDKs
+    - name: List installed SDKs
       run: |
         /usr/local/lib/android/sdk/cmdline-tools/latest/bin/sdkmanager --version
-        /usr/local/lib/android/sdk/cmdline-tools/latest/bin/sdkmanager --uninstall 'build-tools;31.0.0'
         /usr/local/lib/android/sdk/cmdline-tools/latest/bin/sdkmanager --list_installed
-    - name: List SDK dir and cp D8s to DX
+    - name: List SDK dir and cp D8s to DXs
       run: |
         ls -la /usr/local/lib/android/sdk/build-tools/
         cd /usr/local/lib/android/sdk/build-tools/
