--- a/app/package.json
+++ b/app/package.json
@@ -1,10 +1,10 @@
 {
   "name": "in-my-district",
   "displayName": "In my District!",
-  "version": "1.2.24",
+  "version": "1.2.26",
   "description": "Report to your municipality certain irregularities in your neighborhood or district",
   "homepage": "https://nomeubairro.app/",
-  "android-version-code": 10224,
+  "android-version-code": 10226,
   "scripts": {
     "test": "standard && node test/convertHbsToHtml.js && html-validate test/www/index.html && printf '\\n\\nTest OK\\n\\n'",
     "version": "cordova-set-version --version ${npm_package_version} && git add config.xml && node scripts/setAndroidVersionCode.js -v ${npm_package_version} && git add package.json",
@@ -22,32 +22,32 @@
   "author": "João Pimentel Ferreira",
   "license": "GPL-3.0",
   "dependencies": {
-    "@fortawesome/fontawesome-free": "5.15.4",
-    "async": "^3.2.3",
-    "bootstrap": "^4.6.1",
-    "cordova": "^10.0.0",
+    "@fortawesome/fontawesome-free": "6.2.1",
+    "async": "^3.2.4",
+    "bootstrap": "^4.6.2",
+    "cordova": "^11.1.0",
     "cordova-browser": "^6.0.0",
-    "cordova-import-npm": "^1.0.24",
+    "cordova-import-npm": "^1.0.35",
     "cordova-pdf-generator": "^2.1.1",
     "cordova-plugin-cache-clear": "^1.3.8",
-    "cordova-plugin-device": "^2.0.3",
+    "cordova-plugin-device": "^2.1.0",
     "cordova-plugin-geolocation": "^4.1.0",
     "cordova-plugin-inappbrowser": "^5.0.0",
     "cordova-plugin-is-debug": "^1.0.0",
     "cordova-plugin-screen-orientation": "^3.0.2",
-    "cordova-plugin-simple-image-resizer": "^0.2.0",
-    "cordova-plugin-splashscreen": "^6.0.0",
-    "cordova-plugin-statusbar": "^2.4.3",
+    "cordova-plugin-simple-image-resizer": "0.2.0",
+    "cordova-plugin-splashscreen": "^6.0.2",
+    "cordova-plugin-statusbar": "^3.0.0",
     "cordova-plugin-whitelist": "^1.3.4",
-    "cordova-set-version": "^11.0.2",
+    "cordova-set-version": "^13.0.1",
     "crypto-js": "^4.1.1",
     "es6-promise-plugin": "^4.2.2",
     "exif-js": "^2.3.0",
-    "express-handlebars": "^5.3.4",
+    "express-handlebars": "^6.0.6",
     "fs": "0.0.1-security",
     "jAlert": "^4.9.1",
-    "jquery": "^3.5.1",
-    "leaflet": "^1.7.1",
+    "jquery": "^3.6.3",
+    "leaflet": "^1.9.3",
     "leaflet-image": "^0.4.0",
     "leaflet.markercluster": "^1.5.3",
     "path": "^0.12.7",
@@ -69,17 +69,20 @@
       "cordova-plugin-splashscreen": {},
       "cordova-plugin-inappbrowser": {},
       "cordova-plugin-is-debug": {},
-      "cordova-plugin-simple-image-resizer": {
-        "ANDROID_EXIFINTERFACES_VERSION": "27.+"
-      },
       "cordova-plugin-androidx-adapter": {},
-      "cordova-plugin-file": {},
+      "cordova-plugin-file": {
+        "ANDROIDX_WEBKIT_VERSION": "1.4.0"
+      },
       "cordova-plugin-camera": {
-        "ANDROID_SUPPORT_V4_VERSION": "27.+"
+        "ANDROID_SUPPORT_V4_VERSION": "27.+",
+        "ANDROIDX_CORE_VERSION": "1.6.+"
       },
       "cordova-plugin-network-information": {},
       "cordova-plugin-app-version": {},
-      "@globules-io/cordova-plugin-ios-xhr": {}
+      "@globules-io/cordova-plugin-ios-xhr": {},
+      "cordova-plugin-simple-image-resizer": {
+        "ANDROID_EXIFINTERFACES_VERSION": "27.+"
+      }
     },
     "platforms": [
       "ios",
@@ -88,24 +91,24 @@
   },
   "devDependencies": {
     "@globules-io/cordova-plugin-ios-xhr": "github:globules-io/cordova-plugin-ios-xhr",
-    "command-line-args": "^5.2.0",
-    "cordova-android": "^9.1.0",
+    "command-line-args": "^5.2.1",
+    "cordova-android": "^10.1.2",
     "cordova-plugin-androidx-adapter": "^1.1.3",
-    "cordova-plugin-app-version": "^0.1.12",
-    "cordova-plugin-camera": "^5.0.3",
+    "cordova-plugin-app-version": "^0.1.14",
+    "cordova-plugin-camera": "^6.0.0",
     "cordova-plugin-email-composer": "github:jfoclpf/cordova-plugin-email-composer#pr-Fix_361-Android_11_support",
-    "cordova-plugin-file": "^6.0.2",
+    "cordova-plugin-file": "^7.0.0",
     "cordova-plugin-network-information": "^3.0.0",
-    "fs-extra": "^9.0.1",
-    "handlebars": "^4.7.6",
+    "fs-extra": "^11.1.0",
+    "handlebars": "^4.7.7",
     "html-minifier": "^4.0.0",
-    "html-validate": "^4.1.0",
-    "npm-check-updates": "^7.1.1",
-    "semver": "^7.3.5",
-    "standard": "^14.3.4",
-    "uglify-js": "^3.16.2",
+    "html-validate": "^7.13.1",
+    "npm-check-updates": "^16.6.2",
+    "semver": "^7.3.8",
+    "standard": "^17.0.0",
+    "uglify-js": "^3.17.4",
     "uglifycss": "0.0.29",
-    "walk": "^2.3.14",
+    "walk": "^2.3.15",
     "xml2js": "^0.4.23"
   },
   "standard": {
