--- a/app/package.json
+++ b/app/package.json
@@ -1,13 +1,13 @@
 {
   "name": "in-my-district",
   "displayName": "In my District!",
-  "version": "1.2.27",
+  "version": "1.2.28",
   "description": "Report to your municipality certain irregularities in your neighborhood or district",
   "homepage": "https://nomeubairro.app/",
-  "android-version-code": 10227,
+  "android-version-code": 10228,
   "scripts": {
     "test": "standard && node test/convertHbsToHtml.js && html-validate test/www/index.html && printf '\\n\\nTest OK\\n\\n'",
-    "version": "cordova-set-version --version ${npm_package_version} && git add config.xml && node scripts/setAndroidVersionCode.js -v ${npm_package_version} && git add package.json",
+    "version": "cordova-set-version --version ${npm_package_version} && git add config.xml && node scripts/setAndroidVersionCode.js -v ${npm_package_version} && git add package*.json",
     "push-version": "git push && git push origin v${npm_package_version}",
     "build-release-apk": "npm test && scripts/buildReleaseAPK.sh",
     "build-release-aab": "npm test && scripts/buildReleaseAAB.sh",
