--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -9,6 +9,9 @@ on:
   pull_request:
     branches: [ main ]
 
+env:
+  JAVA_HOME: /usr/lib/jvm/java-1.11.0-openjdk-amd64
+
 jobs:
   android:
     strategy:
