--- a/.github/workflows/ios.yml
+++ b/.github/workflows/ios.yml
@@ -9,6 +9,9 @@ on:
   pull_request:
     branches: [ main ]
 
+env:
+  JAVA_HOME: /usr/local/opt/openjdk@11/bin
+
 jobs:
   ios:
     strategy:
@@ -34,10 +37,8 @@ jobs:
       run: |
         brew update
         brew install java11
-    - name: Changing to Java 11
+    - name: Java version
       run: | 
-        javac -version
-        export JAVA_HOME=`/usr/libexec/java_home -v 1.11` || echo OK
         javac -version
     - name: Install Apache Cordova
       run: npm install -g cordova
