--- a/.github/workflows/ios.yml
+++ b/.github/workflows/ios.yml
@@ -48,4 +48,4 @@ jobs:
         rm -rf platforms/ plugins/
         cordova platform add ios
     - run: npm test
-    - run: cordova build ios --release
+    - run: cordova build ios --device --release
