--- a/.github/workflows/ios.yml
+++ b/.github/workflows/ios.yml
@@ -36,8 +36,7 @@ jobs:
     - name: Installing Java 11
       run: |
         brew update
-        brew remove java12
-        brew remove java17
+        brew remove java*
         brew install java11
         sudo ln -sfn /usr/local/opt/openjdk@11/libexec/openjdk.jdk /Library/Java/JavaVirtualMachines/openjdk-11.jdk
         javac -version
