--- a/.github/workflows/ios.yml
+++ b/.github/workflows/ios.yml
@@ -39,8 +39,8 @@ jobs:
         brew update
         brew install java11
         sudo ln -sfn /usr/local/opt/openjdk@11/libexec/openjdk.jdk /Library/Java/JavaVirtualMachines/openjdk-11.jdk
-        ls /usr/local/opt/openjdk*
         /usr/libexec/java_home -V
+        export JAVA_HOME=`/usr/libexec/java_home -v 11.0`
         javac -version
     - name: Install Apache Cordova
       run: npm install -g cordova
