--- a/.github/workflows/ios.yml
+++ b/.github/workflows/ios.yml
@@ -54,4 +54,4 @@ jobs:
         rm -rf platforms/ plugins/
         cordova platform add ios
     - run: npm test
-    - run: cordova build ios --debug
+    - run: cordova build ios --prod --release
