--- a/app/package.json
+++ b/app/package.json
@@ -113,7 +113,7 @@
   },
   "standard": {
     "ignore": [
-      "www/js/res/*",
+      "www/js/res/",
       "test/www/*",
       "platforms/",
       "plugins/"
