--- a/.github/workflows/ios.yml
+++ b/.github/workflows/ios.yml
@@ -55,4 +55,4 @@ jobs:
         rm -rf platforms/ plugins/
         cordova platform add ios
     - run: npm test
-    - run: cordova build ios --production
+    - run: cordova build ios --buildFlag='-UseModernBuildSystem=0'
