--- a/.github/workflows/ios.yml
+++ b/.github/workflows/ios.yml
@@ -55,7 +55,7 @@ jobs:
         rm -rf platforms/ plugins/
         cordova platform add ios
         cordova plugin rm cordova-plugin-network-information
-        cordova clean ios
+        cordova clean
     - run: npm test
     - name: Build iOS
       run: cordova build ios --device --buildFlag="CODE_SIGN_IDENTITY=''" --buildFlag="CODE_SIGNING_REQUIRED=NO" --buildFlag="CODE_SIGN_ENTITLEMENTS=''" --buildFlag="CODE_SIGNING_ALLOWED=NO"
