--- a/.github/workflows/ios.yml
+++ b/.github/workflows/ios.yml
@@ -45,7 +45,7 @@ jobs:
     - name: Requirements
       run: |
         brew install ios-deploy
-        sudo gem install cocoapods
+        brew install cocoapods
     - name: Install Apache Cordova
       run: npm install -g cordova
     - name: Purge Android and add iOS Platform
@@ -56,6 +56,7 @@ jobs:
         cordova platform add ios
         cordova plugin rm cordova-plugin-network-information
         cordova clean
+    - run: cordova requirements ios
     - run: npm test
     - name: Build iOS
       run: cordova build ios --device --buildFlag="CODE_SIGN_IDENTITY=''" --buildFlag="CODE_SIGNING_REQUIRED=NO" --buildFlag="CODE_SIGN_ENTITLEMENTS=''" --buildFlag="CODE_SIGNING_ALLOWED=NO"
