--- a/app/package.json
+++ b/app/package.json
@@ -70,10 +70,6 @@
       "cordova-plugin-inappbrowser": {},
       "cordova-plugin-is-debug": {},
       "cordova-plugin-androidx-adapter": {},
-      "cordova-plugin-camera": {
-        "ANDROID_SUPPORT_V4_VERSION": "27.+",
-        "ANDROIDX_CORE_VERSION": "1.6.+"
-      },
       "cordova-plugin-network-information": {},
       "cordova-plugin-app-version": {},
       "@globules-io/cordova-plugin-ios-xhr": {},
@@ -82,6 +78,9 @@
       },
       "cordova-plugin-file": {
         "ANDROIDX_WEBKIT_VERSION": "1.4.0"
+      },
+      "cordova-plugin-camera": {
+        "ANDROIDX_CORE_VERSION": "1.6.+"
       }
     },
     "platforms": [
@@ -95,7 +94,7 @@
     "cordova-android": "^10.1.2",
     "cordova-plugin-androidx-adapter": "^1.1.3",
     "cordova-plugin-app-version": "^0.1.14",
-    "cordova-plugin-camera": "^6.0.0",
+    "cordova-plugin-camera": "github:felicienfrancois/cordova-plugin-camera",
     "cordova-plugin-email-composer": "github:jfoclpf/cordova-plugin-email-composer#pr-Fix_361-Android_11_support",
     "cordova-plugin-file": "^7.0.0",
     "cordova-plugin-network-information": "^3.0.0",
