--- a/app/package.json
+++ b/app/package.json
@@ -58,9 +58,6 @@
       "cordova-plugin-geolocation": {
         "GPS_REQUIRED": "true"
       },
-      "cordova-plugin-email-composer": {
-        "ANDROID_SUPPORT_V4_VERSION": "27.+"
-      },
       "cordova-plugin-statusbar": {},
       "cordova-plugin-screen-orientation": {},
       "cordova-plugin-device": {},
@@ -81,7 +78,8 @@
       },
       "cordova-plugin-camera": {
         "ANDROIDX_CORE_VERSION": "1.6.+"
-      }
+      },
+      "cordova-plugin-email-composer": {}
     },
     "platforms": [
       "ios",
@@ -95,7 +93,7 @@
     "cordova-plugin-androidx-adapter": "^1.1.3",
     "cordova-plugin-app-version": "^0.1.14",
     "cordova-plugin-camera": "github:felicienfrancois/cordova-plugin-camera",
-    "cordova-plugin-email-composer": "github:jfoclpf/cordova-plugin-email-composer#pr-Fix_361-Android_11_support",
+    "cordova-plugin-email-composer": "^0.10.1",
     "cordova-plugin-file": "^7.0.0",
     "cordova-plugin-network-information": "^3.0.0",
     "fs-extra": "^11.1.0",
