--- a/.github/workflows/ios.yml
+++ b/.github/workflows/ios.yml
@@ -59,4 +59,4 @@ jobs:
     - run: cordova requirements ios
     - run: npm test
     - name: Build iOS
-      run: cordova build ios --device --buildFlag="CODE_SIGN_IDENTITY=''" --buildFlag="CODE_SIGNING_REQUIRED=NO" --buildFlag="CODE_SIGN_ENTITLEMENTS=''" --buildFlag="CODE_SIGNING_ALLOWED=NO"
+      run: cordova build ios --prod --release --buildFlag="CODE_SIGN_IDENTITY=''" --buildFlag="CODE_SIGNING_REQUIRED=NO" --buildFlag="CODE_SIGN_ENTITLEMENTS=''" --buildFlag="CODE_SIGNING_ALLOWED=NO"
