--- a/app/package.json
+++ b/app/package.json
@@ -79,7 +79,8 @@
       "cordova-plugin-camera": {
         "ANDROIDX_CORE_VERSION": "1.6.+"
       },
-      "cordova-plugin-email-composer": {}
+      "cordova-plugin-email-composer": {},
+      "cordova-plugin-android-permissions": {}
     },
     "platforms": [
       "ios",
@@ -90,6 +91,7 @@
     "@globules-io/cordova-plugin-ios-xhr": "github:globules-io/cordova-plugin-ios-xhr",
     "command-line-args": "^5.2.1",
     "cordova-android": "^10.1.2",
+    "cordova-plugin-android-permissions": "^1.1.5",
     "cordova-plugin-androidx-adapter": "^1.1.3",
     "cordova-plugin-app-version": "^0.1.14",
     "cordova-plugin-camera": "github:felicienfrancois/cordova-plugin-camera",
